fix: use visibility hidden instead of display none

--- a/src/App.css
+++ b/src/App.css
@@ -221,5 +221,5 @@ hr.solid {
 }
 
 .hidden {
-  display: none !important;
+  visibility: hidden;
 }
